# Logos

./: .gitignore  Logos.opam  README.md  dune-project
_build/: .db  .digest-db  log
_build/default/: Logica.dune-package  Logica.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: Logica.cma  Logica.cmxa  Logica.cmxs
_build/default/lib/.Logica.objs/byte/: logica.cmi  logica.cmo  logica.cmt
_build/default/lib/.Logica.objs/native/: logica.cmx
_build/default/lib/.merlin-conf/: lib-Logica
_build/default/test/.merlin-conf/: exe-test_Logica
_build/default/test/.test_Logica.eobjs/byte/: dune__exe__Test_Logica.cmi  dune__exe__Test_Logica.cmti
_build/default/test/.test_Logica.eobjs/native/: dune__exe__Test_Logica.cmx
_build/install/default/lib/Logica/: META  dune-package  opam
demos/: demo_consecutive_numbers.ml  demo_epistemic_logic.ml  demo_two_generals.ml  dune
lib/: dune  logos.ml
lib/epistemic_logic/: action.ml  action.mli  actions.ml  actions.mli  el_syntax.ml  el_syntax.mli  epistemic_logic.ml  epistemic_logic.mli  product.ml  product.mli  solver.ml  solver.mli  state.ml  state.mli  syntax.ml  syntax.mli
lib/pqueue/: pqueue.ml  pqueue.mli
lib/problems/: consecutive_numbers.ml  consecutive_numbers.mli  two_generals.ml
lib/table/: table.ml  table.mli
test/: dune
test/test_epistemic_logic/: dune  test_action.ml  test_actions.ml  test_el_syntax.ml  test_epistemic_logic.ml  test_product.ml  test_state.ml  test_syntax.ml
